--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
       </header>
       <main>
         <div class="faceImage">
-         asdHelloasd
+        <h1>
+            Your Kitchen Refacing Solution 
+        </h1>
         </div>
       </main>
       <footer>sus</footer>
