Вот теперь доделал

--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@
         <h1>
             Your Kitchen Refacing Solution 
         </h1>
+        <div class="bringingNewLifeL">
+            <span>
+                Bringing New Life to Your Kitchen Cabinets: American-Made, Family-Owned Company
+            </span>
+        </div>
+        <div class="twoButtons">
+            <div class="getAFreeEstimate">
+                <button>Get Your Free Estimate</button>
+            </div>
+           <div class="viewProcess">
+            <button>View Our Process</button>
+           </div>
+            
+        </div>
+        </div>
+        <div class="threeGoodStuff">
+
         </div>
       </main>
       <footer>sus</footer>
