--- a/index.html
+++ b/index.html
@@ -1,104 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Project</title>
-    <link rel="stylesheet" href="dist/css/main.min.css">
-</head>
-<body>
+    <link rel="stylesheet" href="dist/css/main.min.css" />
+  </head>
+  <body>
     <header>
-        <div class="logo">
-          <img src="/src/images/logo.svg" alt="logo" />
+      <div class="logo">
+        <img src="/src/images/logo.svg" alt="logo" />
+      </div>
+      <nav>
+        <div class="navigateBlock" id="services">
+          <button class="navigateBlockBtn">Services</button>
+          <div class="navigateBlock-content">
+            <a href="#">Cabinet Refacing</a>
+            <a href="#">Cabinet Doors Replacement</a>
+            <a href="#">Thermofoil Cabinet Door Repair</a>
+            <a href="#">Decorative Wall Panels</a>
+          </div>
         </div>
-        <nav>
-          <div class="navigateBlock" id="services">
-            <button class="navigateBlockBtn">Services</button>
-            <div class="navigateBlock-content">
-              <a href="#">Cabinet Refacing</a>
-              <a href="#">Cabinet Doors Replacement</a>
-              <a href="#">Thermofoil Cabinet Door Repair</a>
-              <a href="#">Decorative Wall Panels</a>
-            </div>
+        <div class="navigateBlock" id="commercial">
+          <button class="navigateBlockBtn">Commercial</button>
+          <div class="navigateBlock-content">
+            <a href="#">Cabinet Refacing</a>
+            <a href="#">Cabinet Doors Replacement</a>
+            <a href="#">Thermofoil Cabinet Door Repair</a>
+            <a href="#">Decorative Wall Panels</a>
           </div>
-          <div class="navigateBlock" id="commercial">
-            <button class="navigateBlockBtn">Commercial</button>
-            <div class="navigateBlock-content">
-              <a href="#">Cabinet Refacing</a>
-              <a href="#">Cabinet Doors Replacement</a>
-              <a href="#">Thermofoil Cabinet Door Repair</a>
-              <a href="#">Decorative Wall Panels</a>
-            </div>
-          </div>
-          <div class="navigateBlock" id="gallery">
-            <button class="navigateBlockBtn">Gallery</button>
-            <div class="navigateBlock-content">
-              <a href="#">Cabinet Refacing</a>
-              <a href="#">Cabinet Doors Replacement</a>
-              <a href="#">Thermofoil Cabinet Door Repair</a>
-              <a href="#">Decorative Wall Panels</a>
-            </div>
-          </div>
-          <div class="navigateBlock" id="aboutUs">
-            <button class="navigateBlockBtn">About Us</button>
-            <div class="navigateBlock-content">
-              <a href="#">Cabinet Refacing</a>
-              <a href="#">Cabinet Doors Replacement</a>
-              <a href="#">Thermofoil Cabinet Door Repair</a>
-              <a href="#">Decorative Wall Panels</a>
-            </div>
-          </div>
-          <div class="navigateBlock" id="areasWeServe">
-            <button class="navigateBlockBtn">Areas We Serve</button>
-            <div class="navigateBlock-content">
-              <a href="#">Cabinet Refacing</a>
-              <a href="#">Cabinet Doors Replacement</a>
-              <a href="#">Thermofoil Cabinet Door Repair</a>
-              <a href="#">Decorative Wall Panels</a>
-            </div>
-          </div>
-          <div class="navigateBlock" id="contactUs">
-            <button class="navigateBlockBtn">Contact Us</button>
-            <div class="navigateBlock-content">
-              <a href="#">Cabinet Refacing</a>
-              <a href="#">Cabinet Doors Replacement</a>
-              <a href="#">Thermofoil Cabinet Door Repair</a>
-              <a href="#">Decorative Wall Panels</a>
-            </div>
-          </div>
-          <div class="navigateBlock" id="telephone">
-            <span>(800) 809-7197</span>
-          </div>
-        </nav>
-        <div class="getAFreeEstimate">
-          <button>Get a Free Estimate</button>
         </div>
-      </header>
-      <main>
-        <div class="faceImage">
-        <h1>
-            Your Kitchen Refacing Solution 
-        </h1>
+        <div class="navigateBlock" id="gallery">
+          <button class="navigateBlockBtn">Gallery</button>
+          <div class="navigateBlock-content">
+            <a href="#">Cabinet Refacing</a>
+            <a href="#">Cabinet Doors Replacement</a>
+            <a href="#">Thermofoil Cabinet Door Repair</a>
+            <a href="#">Decorative Wall Panels</a>
+          </div>
+        </div>
+        <div class="navigateBlock" id="aboutUs">
+          <button class="navigateBlockBtn">About Us</button>
+          <div class="navigateBlock-content">
+            <a href="#">Cabinet Refacing</a>
+            <a href="#">Cabinet Doors Replacement</a>
+            <a href="#">Thermofoil Cabinet Door Repair</a>
+            <a href="#">Decorative Wall Panels</a>
+          </div>
+        </div>
+        <div class="navigateBlock" id="areasWeServe">
+          <button class="navigateBlockBtn">Areas We Serve</button>
+          <div class="navigateBlock-content">
+            <a href="#">Cabinet Refacing</a>
+            <a href="#">Cabinet Doors Replacement</a>
+            <a href="#">Thermofoil Cabinet Door Repair</a>
+            <a href="#">Decorative Wall Panels</a>
+          </div>
+        </div>
+        <div class="navigateBlock" id="contactUs">
+          <button class="navigateBlockBtn">Contact Us</button>
+          <div class="navigateBlock-content">
+            <a href="#">Cabinet Refacing</a>
+            <a href="#">Cabinet Doors Replacement</a>
+            <a href="#">Thermofoil Cabinet Door Repair</a>
+            <a href="#">Decorative Wall Panels</a>
+          </div>
+        </div>
+        <div class="navigateBlock" id="telephone">
+          <span>(800) 809-7197</span>
+        </div>
+      </nav>
+      <div class="getAFreeEstimate">
+        <button>Get a Free Estimate</button>
+      </div>
+    </header>
+    <main>
+      <div class="faceImage">
+        <h1>Your Kitchen Refacing Solution</h1>
         <div class="bringingNewLifeL">
-            <span>
-                Bringing New Life to Your Kitchen Cabinets: American-Made, Family-Owned Company
-            </span>
+          <span>
+            Bringing New Life to Your Kitchen Cabinets: American-Made,
+            Family-Owned Company
+          </span>
         </div>
         <div class="twoButtons">
-            <div class="getAFreeEstimate">
-                <button>Get Your Free Estimate</button>
-            </div>
-           <div class="viewProcess">
+          <div class="getAFreeEstimate">
+            <button>Get Your Free Estimate</button>
+          </div>
+          <div class="viewProcess">
             <button>View Our Process</button>
-           </div>
-            
+          </div>
         </div>
+      </div>
+      <div class="threeGoodStuff">
+        <div class="goodStuff">
+          <div class="svgIconLeft">
+            <img src="src/images/moneyBag.svg" alt="unlock 70% savings" />
+          </div>
+          <div class="textRight">
+            Unlock 70% savings: reface instead of replace
+          </div>
         </div>
-        <div class="threeGoodStuff">
-
+        <div class="goodStuff" id="transform">
+          <div class="svgIconLeft">
+            <img src="src/images/clock.svg" alt="transform kitchen 3-5 days" />
+          </div>
+          <div class="textRight">Transform your kitchen in 3-5 days</div>
         </div>
-      </main>
-      <footer>sus</footer>
-   
-</body>
+        <div class="goodStuff" id="financing">
+          <div class="svgIconLeft">
+            <img src="src/images/giveMoneyBag.svg" alt="financing" />
+          </div>
+          <div class="textRight">Kitchen financing options available</div>
+        </div>
+      </div>
+      <div class="mainOurServices">
+        <h2>Our Services</h2>
+        <div class="tripleBlock">
+          <div class="cabinet" id="cabinetRefacing">
+            <div class="imageFurniture">
+              <img
+                src="src/images/cabinetRefacing.png"
+                alt="cabinet Refacing"
+              />
+            </div>
+            <div class="textAboutFurniture">
+              <div class="subHeading">Refresh Your Existing Kitchen with</div>
+              <h3>Cabinet Refacing</h3>
+              <div class="headingXS">Keep Your Existing Doors</div>
+              <div class="textS">
+                Our cabinet refacing service transforms the appearance of your
+                kitchen while preserving its original layout and the structure
+                of your existing cabinets and drawer fronts.
+              </div>
+              <div class="learnMore">
+                <button>Learn More</button>
+              </div>
+            </div>
+          </div>
+          <div class="cabinet" id="CabinetDoorReplacement">
+            <div class="imageFurniture">
+              <img
+                src="src/images/CabinetDoorReplacement.png"
+                alt="cabinet door replacement"
+              />
+            </div>
+            <div class="textAboutFurniture">
+              <div class="subHeading">Replace Your Cabinet Doors with</div>
+              <h3>Cabinet Door Replacement</h3>
+              <div class="headingXS">Custom-made Doors & Drawer Fronts</div>
+              <div class="textS">
+                If your cabinet doors and drawer fronts require a refresh, our
+                team can manufacture new cabinet doors in-house. We ensure the
+                new elements seamlessly blend with your existing kitchen,
+                providing an affordable and efficient upgrade.
+              </div>
+              <div class="learnMore">
+                <button>Learn More</button>
+              </div>
+            </div>
+          </div>
+          <div class="cabinet" id="Thermofoil Cabinet Door Repair">
+            <div class="imageFurniture">
+              <img
+                src="src/images/CabinetDoorReplacement.png"
+                alt="Thermofoil Cabinet Door Repair"
+              />
+            </div>
+            <div class="textAboutFurniture">
+              <div class="subHeading">
+                Renew Your Peeling Cabinet Doors with
+              </div>
+              <h3>Thermofoil Cabinet Door Repair</h3>
+              <div class="headingXS">Nationwide Shipping</div>
+              <div class="textS">
+                We are one of very few cabinet refacing companies who can do
+                this service at our workshop here in West Chicago, without
+                disrupting your daily routine. Just ship your peeling or
+                delaminating doors and fronts and get them back updated in less
+                time than ordering new ones. We offer 48h repairs for Illinois
+                residents.
+              </div>
+              <div class="learnMore">
+                <button>Learn More</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="gallery">
+        
+      </div>
+    </main>
+    <footer>sus</footer>
+  </body>
 </html>
