--- a/index.html
+++ b/index.html
@@ -206,19 +206,104 @@
           <div class="slides">
             <div class="slide">
               <button id="before">Before</button>
-              <img src="src/images/slide1_1.png" alt="slide1_image1">
-              <img src="src/images/slide1_2.png" alt="slide1_image2">
+              <img src="src/images/slide1_1.png" alt="slide1_image1" />
+              <img src="src/images/slide1_2.png" alt="slide1_image2" />
             </div>
             <div class="slide">
               <button id="after">After</button>
-              <img src="src/images/slide2_1.png" alt="slide2_image1">
-              <img src="src/images/slide2_2.png" alt="slide2_image2">
+              <img src="src/images/slide2_1.png" alt="slide2_image1" />
+              <img src="src/images/slide2_2.png" alt="slide2_image2" />
             </div>
             <!-- Добавьте больше слайдов по необходимости -->
           </div>
           <div class="controls">
             <div class="prev" onclick="prevSlide()">❮</div>
             <div class="next" onclick="nextSlide()">❯</div>
+          </div>
+        </div>
+      </div>
+      <div class="Testimonials">
+        <div class="headingAndSubText">
+          <h2>Testimonials</h2>
+          <div class="bodyTextM">
+            Read what our satisfied clients say about their experience with
+            Kitchen Cabinet Guys and the quality of our work.
+          </div>
+        </div>
+        <div class="comms">
+          <div class="comment">
+            <div class="stars">
+              <img src="src/images/stars.svg" alt="all stars" />
+            </div>
+            <div class="commentaryText">
+              THE Kitchen Cabinet Guys ARE GREAT! HIGHLY RECOMMENDED! I found
+              them on the Web (Google Search) and filled out a "Contact" form on
+              a Sat. I couldn't believe that Andrei called me on Sunday morn. -
+              I told my wife "I already like these guys!".
+            </div>
+            <div class="commentAuthor">Christopher Torre</div>
+          </div>
+          <div class="comment">
+            <div class="stars">
+              <img src="src/images/stars.svg" alt="all stars" />
+            </div>
+            <div class="commentaryText">
+              Andre and the team @ Kitchen Cabinet Guys LLC did a stunning
+              transformation of my family’s kitchen. Our realtor said we easily
+              increased the value of our home by $30k for less than a third of
+              the cost. If anyone is considering a new kitchen,
+            </div>
+            <div class="commentAuthor">Michael Jason</div>
+          </div>
+          <div class="comment">
+            <div class="stars">
+              <img src="src/images/stars.svg" alt="all stars" />
+            </div>
+            <div class="commentaryText">
+              THE Kitchen Cabinet Guys ARE GREAT! HIGHLY RECOMMENDED! I found
+              them on the Web (Google Search) and filled out a "Contact" form on
+              a Sat. I couldn't believe that Andrei called me on Sunday morn. -
+              I told my wife "I already like these guys!".
+            </div>
+            <div class="commentAuthor">Christopher Torre</div>
+          </div>
+        </div>
+      </div>
+      <div class="inputForma">
+        <div class="kitchenAndForma">
+          <div class="kitchen">
+            <img src="src/images/kitchenInputForm.png" alt="Take the First Step Towards Your Kitchen Makeover">
+          </div>
+          <div class="forma">
+            <form>
+              <h2>Take the First Step Towards Your Kitchen Makeover</h2>
+              <div class="bodyTextM">
+                Ready to transform your kitchen? Contact us today to get started with your free estimate!
+              </div>
+              <div class="inputs">
+                <div class="names">
+                  <input type="text" name="firstName" placeholder="First Name" />
+                  <input type="text" name="lastName" placeholder="Last Name" />
+                </div>
+                <div class="emailAndPhone">
+                  <input type="email" name="email" placeholder="Email">
+                  <input type="number" name="phone" placeholder="Phone">
+                </div>
+                <div class="addressServicesMessage">
+                  <input type="text" name="firstName" placeholder="Adress" />
+                  <div class="dropdown">
+                    <button onclick="myFunction()" class="dropbtn">Services</button>
+                    <div id="myDropdown" class="dropdown-content">
+                      <a href="#">Ссылка 1</a>
+                      <a href="#">Ссылка 2</a>
+                      <a href="#">Ссылка 3</a>
+                    </div>
+                  </div> 
+                  <input type="text" name="firstName" placeholder="Message" />
+                </div>
+              </div>
+              <button type="submit">Send</button>
+            </form>
           </div>
         </div>
       </div>
