--- a/index.html
+++ b/index.html
@@ -272,43 +272,48 @@
       <div class="inputForma">
         <div class="kitchenAndForma">
           <div class="kitchen">
-            <img src="src/images/kitchenInputForm.png" alt="Take the First Step Towards Your Kitchen Makeover">
+            <img
+              src="src/images/kitchenInputForm.png"
+              alt="Take the First Step Towards Your Kitchen Makeover"
+            />
           </div>
-          <div class="forma">
-            <form>
-              <h2>Take the First Step Towards Your Kitchen Makeover</h2>
-              <div class="bodyTextM">
-                Ready to transform your kitchen? Contact us today to get started with your free estimate!
+
+          <form>
+            <h2>Take the First Step Towards Your Kitchen Makeover</h2>
+            <div class="bodyTextM">
+              Ready to transform your kitchen? Contact us today to get started
+              with your free estimate!
+            </div>
+            <div class="inputs">
+              <div class="names">
+                <input type="text" name="firstName" placeholder="First Name" />
+                <input type="text" name="lastName" placeholder="Last Name" />
               </div>
-              <div class="inputs">
-                <div class="names">
-                  <input type="text" name="firstName" placeholder="First Name" />
-                  <input type="text" name="lastName" placeholder="Last Name" />
-                </div>
-                <div class="emailAndPhone">
-                  <input type="email" name="email" placeholder="Email">
-                  <input type="number" name="phone" placeholder="Phone">
-                </div>
-                <div class="addressServicesMessage">
-                  <input type="text" name="firstName" placeholder="Adress" />
-                  <div class="dropdown">
-                    <button onclick="myFunction()" class="dropbtn">Services</button>
-                    <div id="myDropdown" class="dropdown-content">
-                      <a href="#">Ссылка 1</a>
-                      <a href="#">Ссылка 2</a>
-                      <a href="#">Ссылка 3</a>
-                    </div>
-                  </div> 
-                  <input type="text" name="firstName" placeholder="Message" />
-                </div>
+              <div class="emailAndPhone">
+                <input type="email" name="email" placeholder="Email" />
+                <input type="phone" name="phone" placeholder="Phone" />
               </div>
-              <button type="submit">Send</button>
-            </form>
-          </div>
+              <div class="addressServicesMessage">
+                <input type="text" name="adress" placeholder="Adress" />
+                <div class="dropdown">
+                  <select name="services" id="pet-select">
+                    <option value="">Services</option>
+                    <option value="CabinetRefacing">Cabinet Refacing</option>
+                    <option value="CabinetDoorsReplacement">Cabinet Doors Replacement</option>
+                    <option value="ThermofoilCabinetDoorRepair">Thermofoil Cabinet Door Repair</option>
+                    <option value="DecorativeWallPanels">Decorative Wall Panels</option>
+                  </select>
+                  
+                </div>
+                <input type="text" name="message" placeholder="Message" id="message"/>
+              </div>
+            </div>
+            <button type="submit" class="defaultButton">Get A Free Estimate</button>
+          </form>
         </div>
       </div>
     </main>
-    <footer>sus</footer>
+    <footer>asdasdas</footer>
     <script src="dist/js/main.js"></script>
   </body>
 </html>
