Вёрстка готова, теперь шлифуем и тестируем

--- a/index.html
+++ b/index.html
@@ -299,21 +299,99 @@
                   <select name="services" id="pet-select">
                     <option value="">Services</option>
                     <option value="CabinetRefacing">Cabinet Refacing</option>
-                    <option value="CabinetDoorsReplacement">Cabinet Doors Replacement</option>
-                    <option value="ThermofoilCabinetDoorRepair">Thermofoil Cabinet Door Repair</option>
-                    <option value="DecorativeWallPanels">Decorative Wall Panels</option>
+                    <option value="CabinetDoorsReplacement">
+                      Cabinet Doors Replacement
+                    </option>
+                    <option value="ThermofoilCabinetDoorRepair">
+                      Thermofoil Cabinet Door Repair
+                    </option>
+                    <option value="DecorativeWallPanels">
+                      Decorative Wall Panels
+                    </option>
                   </select>
-                  
                 </div>
-                <input type="text" name="message" placeholder="Message" id="message"/>
+                <input
+                  type="text"
+                  name="message"
+                  placeholder="Message"
+                  id="message"
+                />
               </div>
             </div>
-            <button type="submit" class="defaultButton">Get A Free Estimate</button>
+            <button type="submit" class="defaultButton">
+              Get A Free Estimate
+            </button>
           </form>
         </div>
       </div>
     </main>
-    <footer>asdasdas</footer>
+    <footer>
+      <div class="info">
+        <div class="infoBlock">
+          Physical Address:
+          <a href="#"
+            ><span
+              >245 W. Roosevelt Rd 4 Unit 29,<br> West Chicago, IL 60185</span
+            ></a
+          >
+        </div>
+        <div class="infoBlock">
+          Phone:
+          <a href="#"><span>(800) 809-7197</span></a>
+        </div>
+        <div class="infoBlock">
+          Hours of Operation:
+
+          <span
+            >Our Online Support is available 24/7 <br>Monday – Friday: 9:00 AM –
+            5:00 PM <br>Saturday: 9:00 AM – 2:00 PM <br>Sunday: Closed</span
+          >
+        </div>
+      </div>
+      <div class="followUs">
+        <div class="followBlock">
+          Follow Us:
+          <div class="doubleFollow">
+            <img src="/src/images/followUsToEclipse.svg" alt="follow us to ellipse">
+            <img src="/src/images/followUsToFacebook.svg" alt="follow us to facebook"> 
+          </div>
+        </div>
+        <div class="followBlock">
+          Brought to you by
+          <div class="imageBrought">
+            <img src="src/images/Thermoflip Logo.png">
+
+          </div>
+        </div>
+        <div class="followBlock">
+          <div class="tripleRating">
+            <img src="/src/images/homeAd.png" alt="good by home ad">
+            <img src="/src/images/3smth.png" alt="3 mean good">
+            <img src="/src/images/aRating.png" alt="a+ rating">
+          </div>
+          Copyright © 2023 Kitchen Cabinet Guys - All Rights Reserved
+        </div>
+      </div>
+      <div class="blogFaq">
+        <div class="blog">
+        Blog
+        </div>
+        <div class="faq">
+          FAQ
+        </div>
+      </div>
+      <div class="privacePolicy">
+        <div class="privacyBlock">
+          Privacy Policy
+        </div>
+        <div class="termsCondition">
+          Terms & Conditions
+        </div>
+        <div class="createBy">
+          Created By <a href="#">Comrade Digital Marketing Agency</a>
+        </div>
+      </div>
+    </footer>
     <script src="dist/js/main.js"></script>
   </body>
 </html>
